<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Birthday Greeter</string>
    <string name="service_name">Daily Birthday Checker</string>
    <string name="image_description">App icon!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_contact">Add contact</string>
    <string name="view_contacts">View contacts</string>
    <string name="about_app">About this app</string>
    <string name="add_contact_phonebook">Add contact from phonebook</string>
    <string name="first_name">Enter firstname</string>
    <string name="last_name">Enter lastname (optional)</string>
    <string name="phone_number">Enter mobilephone number</string>
    <string name="birthday">Enter birthday</string>
    <string name="save">Save</string>
    <string name="title_activity_register">Add a contact</string>
    <string name="title_activity_calendar">Choose birthday</string>
    <string name="title_activity_contacts_list">All Contacts</string>
    <string name="editIcon_description">Edit icon</string>
    <string name="deleteIcon_description">Delete icon</string>
    <string name="delete_confirm_title">Delete this contact?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">Nope</string>
    <string name="show_notification">Show notification</string>
    <string name="title_activity_phone_book">Phone Book</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_change_time">Change check time</string>
    <string name="action_settings">Settings</string>
    <string name="about_title">About this app</string>
    <string name="about_body">This app will help you remember your friends\' birthdays. 
        You can either add them to the database manually, or get them from your contacts list. 
        \n\nOnce a day it will check the database and if someone\'s birthday falls on that day, you\'ll get a notification!</string>
    <string name="ok">OK</string>
    <string name="ignore_year">When adding birthday, the year will be ignored.</string>
    <string name="menu_back">Back to main menu</string>

</resources>