<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/birthdayapp"
        android:contentDescription="@string/image_description" />
    
    <LinearLayout
        android:layout_below="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/addContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textColor="@color/light_blue" />
        
        <Button
            android:id="@+id/viewContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_contacts"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textColor="@color/light_blue" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_phonebook"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textColor="@color/light_blue" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textColor="@color/green" />
    </LinearLayout>

</RelativeLayout>